--- a/lib/client/app/application/partials/backend-menu.html
+++ b/lib/client/app/application/partials/backend-menu.html
@@ -15,19 +15,19 @@
         </md-button>
     </md-list-item>
     <span style="height:48px; width: 100%;" flex="100"></span>
-    <md-list-item flex="100" ng-click="closeAllApps(); open_edit_configuration()">
+    <md-list-item ng-if="isAuthorized('Settings', me.security.roles)" flex="100" ng-click="closeAllApps(); open_edit_configuration()">
         <md-icon style="color: {{base_hue_darkest.value}}; cursor: pointer; margin-left: 16px; margin-right: 16px;" aria-label="Remove Task" md-font-library="material-icons">settings</md-icon>
         <span style="color: {{base_hue_darkest.value}}; font-size: 18px;">Settings</span>
     </md-list-item>
-    <md-list-item flex="100" ng-click="closeAllApps(); openUserVault()">
+    <md-list-item ng-if="isAuthorized('UserVault', me.security.roles)" flex="100" ng-click="closeAllApps(); openUserVault()">
         <md-icon style="color: {{base_hue_darkest.value}}; cursor: pointer; margin-left: 16px; margin-right: 16px;" aria-label="Remove Task" md-font-library="material-icons">recent_actors</md-icon>
         <span style="color: {{base_hue_darkest.value}}; font-size: 18px;">User Vault</span>
     </md-list-item>
-    <md-list-item flex="100" ng-click="closeAllApps(); openMediaVault(null)">
+    <md-list-item ng-if="isAuthorized('MediaVault', me.security.roles)" flex="100" ng-click="closeAllApps(); openMediaVault(null)">
         <md-icon style="color: {{base_hue_darkest.value}}; cursor: pointer; margin-left: 16px; margin-right: 16px;" aria-label="Remove Task" md-font-library="material-icons">photo_library</md-icon>
         <span style="color: {{base_hue_darkest.value}}; font-size: 18px;">Media Vault</span>
     </md-list-item>
-    <md-list-item flex="100" ng-click="closeAllApps(); openTaskRunner()">
+    <md-list-item ng-if="isAuthorized('TaskRunner', me.security.roles)" flex="100" ng-click="closeAllApps(); openTaskRunner()">
         <md-icon style="color: {{base_hue_darkest.value}}; cursor: pointer; margin-left: 16px; margin-right: 16px;" aria-label="Remove Task" md-font-library="material-icons">assignment</md-icon>
         <span style="color: {{base_hue_darkest.value}}; font-size: 18px;">Task Runner</span>
     </md-list-item>
