--- a/lib/client/app/application/pages/posts/partials/blog-list-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-list-template.html
@@ -64,7 +64,7 @@
 	                    <md-list-item class="md-3-line" flex>
 	                    	<md-icon class="md-avatar-icon" aria-label="View details" style="color: {{primary_hue_normal.value}};">description</md-icon>
 	                        <div class="md-list-item-text">
-	                        	<h3 style="font-size: 24px;">{{blog.data.title}}</h3>
+	                        	<h3 md-truncate style="font-size: 24px;">{{blog.data.title}}</h3>
 	                            <p style="color: {{primary_hue_normal.value}};">{{blog.data.headline}}</p>
 	                            <p>By {{blog.data.author}}  /  {{blog.data.date | date : "MMM d, y h:mm:ss a"}}</p>
 	                        </div>                        
