landing blog UX | Mobile Nav UX

--- a/lib/client/app/application/landing/partials/section_2.html
+++ b/lib/client/app/application/landing/partials/section_2.html
@@ -44,8 +44,8 @@
 		</div>
 	</div>
 	<div flex="100" style="text-align: center; margin-top: 64px; z-index: 2">
-		<md-button class="md-raised lightweight-round" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; width: 100px;">
-			<a href="/blog">
+		<md-button class="custom-deep-button lightweight-round" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; width: 250px; height: 48px">
+			<a href="/blog" style="color: {{base_hue_lightest.value}};">
         	<md-icon style="color: {{base_hue_lightest.value}};" aria-label="Remove Task" md-font-library="material-icons">subdirectory_arrow_right</md-icon>&nbsp;&nbsp;&nbsp;More News
         	</a>
         </md-button>
