--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -14,7 +14,7 @@
 		<!-- header -->
 
 		<div ng-include src="'application/partials/navigation-menu.html'"></div>
-        <div class="dialog-curtain" ng-show="show_index_form == true">
+        <div class="dialog-curtain" ng-show="show_index_form == true" style="overflow-y: auto!important;">
     		<div class="index-form" layout-padding>
     			<md-card class="custom-deep-card" style="background: #fafafa; width: 100%; position: relative;">
     				<md-button style="position: absolute; top: 24px; right: 8px;" class="md-icon-button" ng-click="show_index_form = false" aria-label="More">
