--- a/lib/client/app/application/pages/posts/partials/blog-list-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-list-template.html
@@ -14,7 +14,7 @@
 
 		<div class="interior-page" flex="100" layout="row" layout-align="center start" layout-wrap style="width: 100%;">
 
-		    <div class="md-whiteframe-8dp sidebar form" layout="column" layout-wrap flex="90" flex-sm="90" flex-gt-sm="25" layout-align="space-around stretch" ng-attr-style="z-index: 1; min-height: 200px; background-color: {{base_hue_lightest.value}}; padding: 0; margin: 8px 0 32px 0;">
+		    <div class="md-whiteframe-8dp sidebar form" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="25" layout-align="start start" ng-attr-style="z-index: 1; min-height: 200px; background-color: {{base_hue_lightest.value}}; padding: 0; margin: 8px 0 32px 0;">
 				<md-card ng-attr-style="background: {{base_hue_lightest.value}}; width: 100%; position: relative; margin: 0;">
 	                <form name="spotlight">
 	                	<div style="text-align: left; padding-left: 16px; border-left: 4px solid {{primary_hue_normal.value}}; box-sizing: border-box;">
@@ -58,13 +58,13 @@
 	            </md-card>
 			</div>
 			<div layout="row" layout-wrap flex="100" flex-sm="100" flex-gt-sm="50" layout-align="center start" layout-align-gt-sm="start start">
-				<md-card class="md-whiteframe-8dp" ng-repeat="blog in bloglist | orderBy : 'blog.data.date' : true" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="100" layout-align="start start" ng-attr-style="z-index: 3; background-color: {{base_hue_lightest.value}}; cursor: pointer; margin-bottom: 0;" layout-padding>
+				<md-card class="md-whiteframe-8dp" ng-repeat="blog in bloglist | orderBy : 'blog.data.date' : true" layout="column" layout-wrap flex="90" flex-sm="90" flex-gt-sm="100" layout-align="space-around stretch" ng-attr-style="z-index: 3; background-color: {{base_hue_lightest.value}}; cursor: pointer; margin-bottom: 0;" layout-padding>
 					<md-list class="md-dense" flex>
 						<a ng-href="{{blog.settings.url}}">
 	                    <md-list-item class="md-3-line" flex>
 	                    	<md-icon class="md-avatar-icon" aria-label="View details" style="color: {{primary_hue_normal.value}};">description</md-icon>
 	                        <div class="md-list-item-text">
-	                        	<h3 md-truncate style="font-size: 24px;">{{blog.data.title}}</h3>
+	                        	<h3 style="font-size: 24px;">{{blog.data.title}}</h3>
 	                            <p style="color: {{primary_hue_normal.value}};">{{blog.data.headline}}</p>
 	                            <p>By {{blog.data.author}}  /  {{blog.data.date | date : "MMM d, y h:mm:ss a"}}</p>
 	                        </div>                        
