--- a/lib/client/app/application/pages/posts/partials/blog-list-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-list-template.html
@@ -57,8 +57,8 @@
 	                </form>
 	            </md-card>
 			</div>
-			<div layout="row" layout-wrap flex="100" flex-sm="100" flex-gt-sm="50" layout-align="center start" layout-align-gt-sm="start start">
-				<md-card class="md-whiteframe-8dp" ng-repeat="blog in bloglist | orderBy : 'blog.data.date' : true" layout="column" layout-wrap flex="90" flex-sm="90" flex-gt-sm="100" layout-align="space-around stretch" ng-attr-style="z-index: 3; background-color: {{base_hue_lightest.value}}; cursor: pointer; margin-bottom: 0;" layout-padding>
+			<div layout="column" layout-wrap flex="100" flex-sm="100" flex-gt-sm="50" layout-align="space-around stretch" layout-align-gt-sm="space-around stretch">
+				<md-card class="md-whiteframe-8dp" ng-repeat="blog in bloglist | orderBy : 'blog.data.date' : true" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="100" layout-align="start start" ng-attr-style="z-index: 3; background-color: {{base_hue_lightest.value}}; cursor: pointer; margin-bottom: 0;" layout-padding>
 					<md-list class="md-dense" flex>
 						<a ng-href="{{blog.settings.url}}">
 	                    <md-list-item class="md-3-line" flex>
