--- a/lib/client/app/application/pages/posts/partials/blog-template.html
+++ b/lib/client/app/application/pages/posts/partials/blog-template.html
@@ -109,7 +109,10 @@
 	            </md-card>
 			</div>
 
-		    
+		    <!-- page break -->
+			<br>
+			<br>
+			<!-- page break -->
 
 		</div>
 	</section>
