--- a/lib/client/app/application/pages/projects/partials/project-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-template.html
@@ -106,6 +106,11 @@
 	            </md-card>
 			</div>
 
+			<!-- page break -->
+			<br>
+			<br>
+			<!-- page break -->
+
 		</div>
 
 	</section>
