--- a/lib/client/app/application/pages/info/partials/info-template.html
+++ b/lib/client/app/application/pages/info/partials/info-template.html
@@ -54,15 +54,17 @@
 		    <!-- tab Panel Component -->
 
             <!-- Map Widget -->
-            <div class="md-whiteframe-8dp" flex="90" flex-sm="90" flex-gt-sm="25" layout="row" layout-align="center start" style="z-index: 2; position: relative; margin: 8px 0">
+            <div class="md-whiteframe-8dp" flex="90" flex-sm="90" flex-gt-sm="25" layout="row" layout-align="center start" style="z-index: 2; position: relative; margin: 8px 0 40px 0;">
 				<div style="margin: 0;" layout-wrap layout="row" layout-align="start center" flex>
 					<div flex style="margin-bottom: -5px; position: relative;" layout-align="end center">
 						<iframe ng-src="{{trusted_google_address_widget_map}}" width="auto" height="400" frameborder="0" style="border:0; width: 100%;" allowfullscreen></iframe>
 					</div>
 				</div>
-				<md-button class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: -36px; right: 8px;">
+				
+				<md-button href="{{settings.data.address.google_address_link}}" class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: -36px; right: 8px;">
 			        <md-icon style="color: {{base_hue_lighter.value}};">directions</md-icon>
 			    </md-button>
+			    
 			</div>
             <!-- Map Widget -->
 
