--- a/lib/client/app/application/pages/authentication/partials/login.html
+++ b/lib/client/app/application/pages/authentication/partials/login.html
@@ -7,10 +7,13 @@
 	<section ng-cloak>
 
 		<!-- header -->
-		<md-subheader class="header" layout-align="center center" layout="row" layout flex style="z-index: 5; box-shadow: none; border-bottom: 1px solid #e0e0e0">
+		<md-subheader class="header" layout-align="center center" layout="row" layout flex style="z-index: 21!important; box-shadow: none; border-bottom: 1px solid #e0e0e0; height: 60px;">
 			<div ng-include src="'application/partials/header.html'"></div>
 		</md-subheader>
 		<!-- header -->
+
+		<div ng-include src="'application/partials/navigation-dropdown-parent-mobile.html'"></div>
+		<div ng-include src="'application/partials/navigation-dropdown.html'"></div>
 
 		<div layout="row" layout-align="center center">
 			<div flex="80" flex-sm="60" flex-gt-sm="40" style="margin-top: 64px;">
@@ -18,7 +21,7 @@
 					<img src="{{settings.data.logo}}" style="width: 300px; height: auto;" ng-cloak="true">
 				</div>
 				<div ng-include ng-show="progressAnimation" src="'application/partials/loading-spinner.html'"></div>
-				<form name="login" autocomplete="nope" ng-show="!progressAnimation">
+				<form name="login" autocomplete="none" ng-show="!progressAnimation">
 					<md-content>
 						<md-list-item>
 							<md-input-container class="md-block lightweight-md-input" flex>
@@ -40,15 +43,19 @@
 							    </div>
 							</md-input-container>
 						</md-list-item>
-						<div layout-padding layout="row" layout-align="end center">
-							<div>
-								<!-- <md-button style="background: transparent;">
-								Forgot Password
-								</md-button> -->
-								<md-button class="md-raised" style="background: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};" ng-click="signIn()">
-								Login
-								</md-button>
-							</div>
+						<!-- <div vc-recaptcha key="'6LcI7HQUAAAAAJNcej9U0cgepLlhFjwBPLO3fZpL'" ng-model="login_recaptcha"></div> -->
+                        <br>
+						<div layout-padding layout="row" layout-align="start center">
+							
+							
+							<md-button ng-click="signIn()" class="custom-deep-button lightweight-round" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; width: 150px; height: 48px; z-index: 2;">
+	                            <md-icon style="color: {{base_hue_lightest.value}};">send</md-icon>&nbsp;&nbsp;Sign In
+	                        </md-button>
+
+	                        <!-- <md-button ng-click="signUp()" class="custom-deep-button lightweight-round" style="background-color: {{base_hue_lightest.value}}; color: {{primary_hue_normal.value}}; width: 150px; height: 48px">
+	                            <md-icon style="color:{{primary_hue_normal.value}};">send</md-icon>&nbsp;&nbsp;Sign Up
+	                        </md-button> -->
+							
 						</div>
 					</md-content>
 				</form>
