--- a/lib/client/app/application/pages/info/partials/info-template.html
+++ b/lib/client/app/application/pages/info/partials/info-template.html
@@ -5,12 +5,13 @@
 	<section style="background: {{base_hue_lighter.value}}">
 		
 		<!-- header -->
-		<md-subheader class="header md-whiteframe-6dp" layout-align="center center" layout="row" layout flex style="z-index: 5; border-bottom: 1px solid #e0e0e0" ng-class="{'header-ms-explorer': browser == 'ie'}">
+		<md-subheader class="header md-whiteframe-6dp" layout-align="center center" layout="row" layout flex style="z-index: 21!important; border-bottom: 1px solid #e0e0e0; height: 60px;" ng-class="{'header-ms-explorer': browser == 'ie'}">
 			<div ng-include src="'application/partials/header.html'"></div>
 		</md-subheader>
 		<!-- header -->
 
-		<div ng-include src="'application/partials/navigation-menu.html'"></div>
+		<div ng-include src="'application/partials/navigation-dropdown-parent-mobile.html'"></div>
+		<div ng-include src="'application/partials/navigation-dropdown.html'"></div>
 
 		<md-button ng-if="me.security.roles == 'Lightweight Internet Coordinator' || me.security.roles == 'Lightweight Support'" ng-click="edit(infoPage.settings.configs, infoPage)" class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: fixed; bottom: 128px; right: 24px;">
 	        <md-icon style="color: {{base_hue_lighter.value}};">build</md-icon>
@@ -34,7 +35,7 @@
 		    <md-card class="md-whiteframe-8dp" layout="row" layout-align="center start" layout-wrap flex="90" flex-sm="90" flex-gt-sm="50" style="z-index: 3; background-color: {{base_hue_lightest.value}};" layout-padding>
 		    	<div flex="100" ng-attr-style="margin-bottom: 100px; width: 100%; min-height: 400px;" layout-margin layout-padding>
 			    	<div ng-repeat="content in infoPage.data.page.contents" flex="100">
-			    		<h1 class="h1 base-hdst--text" ng-if="content.type == 'title'" ng-bind-html="content.data" style="margin-top: 8px;"></h1>
+			    		<h1 class="h1 base-hdst--text" ng-if="content.type == 'title'" ng-bind-html="content.data" ng-attr-style="color: {{primary_hue_normal.value}}; margin-top: 8px; margin-bottom: 8px;"></h1>
 						<p class="base-hdst--text" ng-if="content.type == 'text'" ng-bind-html="content.data"></p>
 						<p class="base-hdst--text" ng-repeat="list in content.data track by $index" ng-if="content.type == 'list'">&bull;&nbsp;&nbsp;{{list.item}}</p>
 						<div class="mdl-grid full-width no-padding">
