--- a/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
+++ b/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
@@ -10,12 +10,13 @@
 	<section style="background: {{base_hue_lighter.value}}">
 
 		<!-- header -->
-		<md-subheader class="header md-whiteframe-6dp" layout-align="center center" layout="row" layout flex style="z-index: 5; border-bottom: 1px solid #e0e0e0" ng-class="{'header-ms-explorer': browser == 'ie'}">
+		<md-subheader class="header md-whiteframe-6dp" layout-align="center center" layout="row" layout flex style="z-index: 21!important; border-bottom: 1px solid #e0e0e0; height: 60px;" ng-class="{'header-ms-explorer': browser == 'ie'}">
 			<div ng-include src="'application/partials/header.html'"></div>
 		</md-subheader>
 		<!-- header -->
 
-		<div ng-include src="'application/partials/navigation-menu.html'"></div>
+		<div ng-include src="'application/partials/navigation-dropdown-parent-mobile.html'"></div>
+		<div ng-include src="'application/partials/navigation-dropdown.html'"></div>
 
 		<md-button ng-if="me.security.roles == 'Lightweight Internet Coordinator' || me.security.roles == 'Lightweight Support'" ng-click="edit(spotlightPage.settings.configs, spotlightPage)" class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: fixed; bottom: 128px; right: 24px;">
 	        <md-icon style="color: {{base_hue_lighter.value}};">build</md-icon>
@@ -66,7 +67,7 @@
 					</div>
 	                <form name="spotlightForm" ng-show="!progressAnimation">
 	                	<div style="text-align: left; padding-left: 16px; border-left: 4px solid {{primary_hue_normal.value}}; box-sizing: border-box;">
-	                		<h1 style="color: {{primary_hue_normal.value}};">Contact mma Today!</h1>
+	                		<h1 style="color: {{primary_hue_normal.value}};">Contact {{settings.data.company_name}} Today!</h1>
 	                	</div>
 	                    <md-card-content>
 	                        <md-list-item>
@@ -111,6 +112,7 @@
 	                                </div>
 	                            </md-input-container>
 	                        </md-list-item>
+	                        <div vc-recaptcha key="'6LcI7HQUAAAAAJNcej9U0cgepLlhFjwBPLO3fZpL'" ng-model="spotlight_page_contact_form.recaptcha"></div>
 	                    </md-card-content>
 	                    <md-button ng-click="sendLead(spotlight_page_contact_form, spotlightPage.data.title); clearForm(Form)" class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: -36px; right: 8px;">
 					        <md-icon style="color: {{base_hue_lighter.value}};">send</md-icon>
