--- a/lib/client/app/application/pages/authentication/partials/login.html
+++ b/lib/client/app/application/pages/authentication/partials/login.html
@@ -7,13 +7,12 @@
 	<section ng-cloak>
 
 		<!-- header -->
-		<md-subheader class="header" layout-align="center center" layout="row" layout flex style="z-index: 21!important; box-shadow: none; border-bottom: 1px solid #e0e0e0; height: 60px;">
+		<md-subheader class="header md-whiteframe-6dp" layout-align="center center" layout="row" layout flex style="z-index: 5; border-bottom: 1px solid #e0e0e0" ng-class="{'header-ms-explorer': browser == 'ie'}">
 			<div ng-include src="'application/partials/header.html'"></div>
 		</md-subheader>
 		<!-- header -->
 
-		<div ng-include src="'application/partials/navigation-dropdown-parent-mobile.html'"></div>
-		<div ng-include src="'application/partials/navigation-dropdown.html'"></div>
+		<div ng-include src="'application/partials/navigation-menu.html'"></div>
 
 		<div layout="row" layout-align="center center">
 			<div flex="80" flex-sm="60" flex-gt-sm="40" style="margin-top: 64px;">
