--- a/lib/client/app/application/pages/resource/partials/resource-template.html
+++ b/lib/client/app/application/pages/resource/partials/resource-template.html
@@ -5,13 +5,12 @@
 	<section style="background: {{base_hue_lighter.value}}">
 
 		<!-- header -->
-		<md-subheader class="header md-whiteframe-6dp" layout-align="center center" layout="row" layout flex style="z-index: 21!important; border-bottom: 1px solid #e0e0e0; height: 60px;" ng-class="{'header-ms-explorer': browser == 'ie'}">
+		<md-subheader class="header md-whiteframe-6dp" layout-align="center center" layout="row" layout flex style="z-index: 5; border-bottom: 1px solid #e0e0e0" ng-class="{'header-ms-explorer': browser == 'ie'}">
 			<div ng-include src="'application/partials/header.html'"></div>
 		</md-subheader>
 		<!-- header -->
 
-		<div ng-include src="'application/partials/navigation-dropdown-parent-mobile.html'"></div>
-		<div ng-include src="'application/partials/navigation-dropdown.html'"></div>
+		<div ng-include src="'application/partials/navigation-menu.html'"></div>
 
 	    <div class="interior-page" flex="100" layout="row" layout-align="center start" layout-wrap style="width: 100%;">
 			
