--- a/lib/client/app/stylesheets/header.css
+++ b/lib/client/app/stylesheets/header.css
@@ -1,5 +1,6 @@
 /* css document */
 .header {z-index: 4!important;}
+.dialog-curtain .header, .secondary-dialog-curtain .header {z-index: 21!important;}
 .md-subheader-inner {width: 100%;}
 
 .navigation.menu {display: none;}
