--- a/lib/client/app/stylesheets/header.css
+++ b/lib/client/app/stylesheets/header.css
@@ -20,6 +20,9 @@
     overflow-y: auto; position: fixed; top: 0; z-index: 1001;
     overflow-x: hidden;
 }
+.navigation.mini {
+    
+}
 @media screen and (max-width: 839px) {
     .navigation.panel {
         width: 90%; height: 100%; max-height: 100%; 
