--- a/lib/client/app/application/partials/header.html
+++ b/lib/client/app/application/partials/header.html
@@ -16,6 +16,9 @@
 			<md-icon ng-attr-style="color: {{base_hue_darkest.value}}">keyboard_arrow_down</md-icon>
 			{{item.navigation.parent.name}}
 		</md-button>
+		<md-button class="md-icon-button navigation link" style="background-color: #d1d2d3;" ng-click="null">
+			<md-icon ng-attr-style="color: {{primary_hue_normal.value}}">face</md-icon>
+		</md-button>
 	</div>
 	<!-- Navigation Items -->
 </div>
