--- a/lib/client/app/application/partials/navigation-dropdown.html
+++ b/lib/client/app/application/partials/navigation-dropdown.html
@@ -29,11 +29,11 @@
                 <h2 ng-attr-style="color: {{base_hue_lightest.value}};">
                     {{menu_title}}
                 </h2>
-                <div class="md-secondary">
+                <!-- <div class="md-secondary">
                     <md-button class="md-icon-button" ng-click="close_menu()" aria-label="Close">
                         <md-icon ng-attr-style="color: {{base_hue_lightest.value}};">close</md-icon>
                     </md-button>
-                </div>
+                </div> -->
             </md-list-item>
             <a ng-href="{{child.url}}" ng-repeat="child in child_items" class="child navigation link mobile" style="cursor: pointer;">
                 <md-list-item ng-click="close_menu(); close_parent_menu()" class="navigation item" flex="100" layout-padding>
@@ -46,10 +46,10 @@
     </div>
 
 
-    <div flex="100" flex-gt-sm="40" layout="row" layout-align="center center" ng-class="{'null': menu_title == 'Galleries'}">
+    <div flex="100" flex-gt-sm="40" layout="row" layout-align="center center" ng-class="{'null': menu_title == 'Projects'}">
     	
 
-    	<div class="container navigation widget featured_items" layout-margin flex="100" layout="row" layout-align="center center" layout-wrap ng-show="menu_title == 'Galleries'">
+    	<div class="container navigation widget featured_items" layout-margin flex="100" layout="row" layout-align="center center" layout-wrap ng-show="menu_title == 'Projects'">
             <div flex="100" layout-margin>
                 <md-grid-list md-cols="4" md-cols-xs="4" md-cols-sm="4" md-cols-md="6" md-cols-gt-md="6" md-row-height-gt-md="175px" md-row-height-gt-sm="200px" md-row-height="125px" md-gutter="8px" md-gutter-gt-sm="4px">
                     <md-grid-tile class="md-whiteframe-4dp" ng-repeat="tile in projectslist | limitTo: -6" md-rowspan="1" md-rowspan-xs="1" md-rowspan-sm="1" md-colspan="4" md-colspan-gt-md="3" md-colspan-md="3" md-colspan-sm="4" md-colspan-xs="4" style="overflow: hidden;" ng-init="hovered = false" ng-mouseenter="hovered = true" ng-mouseleave="hovered = false">
@@ -122,7 +122,7 @@
         </div>
         
 
-        <div class="navigation map-widget widget" ng-show="menu_title == 'Locate Us'" layout="row" layout-align="center center" flex="100" layout-margin class="navigation widget">
+        <div class="navigation map-widget widget" ng-show="menu_title == 'About Us'" layout="row" layout-align="center center" flex="100" layout-margin class="navigation widget">
 
         	<!-- Map Widget -->
             <div class="md-whiteframe-8dp" flex="100" layout="row" layout-align="center start" style="z-index: 2; position: relative; margin: 16px 0 40px 0;">
