--- a/lib/client/app/application/partials/navigation-dropdown.html
+++ b/lib/client/app/application/partials/navigation-dropdown.html
@@ -82,7 +82,7 @@
                 </div>
                 <form name="navigation" ng-show="!progressAnimation">
                     <div style="text-align: center">
-                        <h1 style="color: {{base_hue_lightest.value}}!important;">Contact MMA Today!</h1>
+                        <h1 style="color: {{base_hue_lightest.value}}!important;">Contact <span style="color: {{primary_hue_normal.value}}">MMA Today!</span></h1>
                     </div>
                     <md-card-content>
                         <md-list-item>
