--- a/lib/client/app/application/partials/navigation-dropdown.html
+++ b/lib/client/app/application/partials/navigation-dropdown.html
@@ -67,7 +67,7 @@
         <div class="container navigation widget featured_items" layout-margin flex="100" layout="row" layout-align="center center" layout-wrap ng-if="menu_title == 'People'">
             <div flex="100" layout-margin>
                 <md-grid-list md-cols="4" md-cols-xs="4" md-cols-sm="4" md-cols-md="6" md-cols-gt-md="6" md-row-height-gt-md="175px" md-row-height-gt-sm="200px" md-row-height="125px" md-gutter="8px" md-gutter-gt-sm="4px">
-                    <md-grid-tile class="md-whiteframe-4dp" ng-repeat="tile in settings.staff.members | limitTo: 3" md-rowspan="2" md-rowspan-xs="1" md-rowspan-sm="1" md-colspan="4" md-colspan-gt-md="2" md-colspan-md="3" md-colspan-sm="4" md-colspan-xs="4" style="overflow: hidden;" ng-init="hovered = false">
+                    <md-grid-tile class="md-whiteframe-4dp" ng-repeat="tile in settings.staff.members | limitTo: 4" md-rowspan="2" md-rowspan-xs="1" md-rowspan-sm="1" md-colspan="4" md-colspan-gt-md="3" md-colspan-md="3" md-colspan-sm="4" md-colspan-xs="4" style="overflow: hidden;" ng-init="hovered = false">
                         <img ng-src="{{tile.source}}" style="width: auto; max-width:300%; min-height: 100%;">
                         <md-grid-tile-footer md-truncate ng-class="{'active': hovered}"><h3 style="white-space: pre-wrap;">{{tile.name}}<md-icon ng-attr-style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Go to gallery {{tile.name}}" md-font-library="material-icons">chevron_right</md-icon></h3></md-grid-tile-footer>
                     </md-grid-tile>
@@ -76,11 +76,11 @@
         </div>
 
         <div ng-if="menu_title == 'Services'" layout="row" layout-align="center center" flex="100" layout-margin class="container navigation widget" style="min-width: 100%;">
-            <div class="md-whiteframe-8dp" flex="100" layout="row" layout-align="center start" style="z-index: 2; position: relative; background: #373737; margin-bottom: 48px; margin-top: 36px;">
+            <div flex="100" layout="row" layout-align="center start" style="z-index: 2;>
                 <div style="text-align: center">
                     <div ng-include ng-show="progressAnimation" src="'application/partials/loading-spinner.html'"></div>
                 </div>
-                <form name="navigation" ng-show="!progressAnimation">
+                <form name="navigation" class="md-whiteframe-8dp" ng-show="!progressAnimation" style="z-index: 2; position: relative; background: #373737; margin-bottom: 48px; margin-top: 36px;">
                     <div style="text-align: center">
                         <h1 style="color: {{base_hue_lightest.value}}!important;">Contact <span style="color: {{primary_hue_normal.value}}">MMA Today!</span></h1>
                     </div>
