--- a/lib/client/app/application/partials/footer.html
+++ b/lib/client/app/application/partials/footer.html
@@ -149,5 +149,5 @@
 			</div>
 		</div>
 	</div>
-	<img src="media/pexels-photo-859892.jpeg" style="position: absolute; top: 0; left: 0; opacity: .1; min-height: 100%; min-width: 100%; z-index: 1; max-width: 500%;">
+	<img src="media/pexels-photo-859892.jpeg" style="position: absolute; top: -275px; left: 0; opacity: .1; min-height: 100%; min-width: 100%; z-index: 1; max-width: 500%;">
 </div>
