fix typo that inteferred with everything

--- a/lib/client/app/application/partials/footer.html
+++ b/lib/client/app/application/partials/footer.html
@@ -82,7 +82,7 @@
 				<img class="footer logo" src="media/logo-full-white.png">
 			</div>
 		</div>
-		<div layout-padding flex="100" flex-gt-sm="70">
+		<div layout-padding flex="100" flex-gt-sm="70" layout-align="end center">
 			<div flex layout="row" layout-align="end center" layout-wrap>
 				<div flex="50" flex-sm="25" flex-gt-sm="25">
 					<p ng-attr-style="color: {{base_hue_lightest.value}};">{{settings.data.company_name}} &#169; {{year}}</p>
