--- a/lib/client/app/application/partials/navigation-dropdown.html
+++ b/lib/client/app/application/partials/navigation-dropdown.html
@@ -57,7 +57,7 @@
     </div>
 
 
-    <div flex="100" flex-gt-sm="40" layout="row" layout-align="center center" ng-class="{'null': menu_title == 'Projects', 'null': menu_title == 'People', 'null': menu_title == 'Services'}">
+    <div flex="100" flex-gt-sm="40" layout="row" layout-align="center start" ng-class="{'null': menu_title == 'Projects', 'null': menu_title == 'People', 'null': menu_title == 'Services'}">
     	
     	<div class="container navigation widget featured_items" layout-margin flex="100" layout="row" layout-align="center center" layout-wrap ng-if="menu_title == 'Projects'">
             <div flex="100" layout-margin>
