--- a/lib/client/app/application/partials/header.html
+++ b/lib/client/app/application/partials/header.html
@@ -12,10 +12,18 @@
 		<md-button class="md-icon-button navigation menu" ng-attr-style="color: {{base_hue_darkest.value}};" ng-click="open_parent_menu()">
 			<md-icon ng-attr-style="color: {{base_hue_darkest.value}}">menu</md-icon>
 		</md-button>
-		<md-button ng-repeat="item in settings.navigation.data track by $index" class="navigation link" ng-click="sub_navigation_panel = true; open_menu(item)" ng-attr-style="color: {{base_hue_darkest.value}};">
-			<md-icon ng-attr-style="color: {{base_hue_darkest.value}}">keyboard_arrow_down</md-icon>
-			{{item.navigation.parent.name}}
-		</md-button>
+		<span ng-repeat="item in settings.navigation.data track by $index">
+			<md-button ng-if="item.navigation.parent.name != 'People'" class="navigation link" ng-click="sub_navigation_panel = true; open_menu(item)" ng-attr-style="color: {{base_hue_darkest.value}};">
+				<md-icon ng-attr-style="color: {{base_hue_darkest.value}}">keyboard_arrow_down</md-icon>
+				{{item.navigation.parent.name}}
+			</md-button>
+			<a ng-if="item.navigation.parent.name == 'People'" ng-href="item.navigation.parent.url">
+				<md-button class="navigation link" ng-attr-style="color: {{base_hue_darkest.value}};">
+					<md-icon ng-attr-style="color: {{base_hue_darkest.value}}">keyboard_arrow_down</md-icon>
+					{{item.navigation.parent.name}}
+				</md-button>
+			</a>
+		</span>
 		<md-button class="md-icon-button navigation link" style="background-color: #d1d2d3;" ng-click="null">
 			<md-icon ng-attr-style="color: {{primary_hue_normal.value}}">face</md-icon>
 		</md-button>
