--- a/lib/client/app/application/partials/header.html
+++ b/lib/client/app/application/partials/header.html
@@ -13,11 +13,11 @@
 			<md-icon ng-attr-style="color: {{base_hue_darkest.value}}">menu</md-icon>
 		</md-button>
 		<span ng-repeat="item in settings.navigation.data track by $index">
-			<md-button ng-if="item.navigation.parent.name != 'People'" class="navigation link" ng-click="sub_navigation_panel = true; open_menu(item)" ng-attr-style="color: {{base_hue_darkest.value}};">
+			<md-button ng-if="!item.navigation.parent.url" class="navigation link" ng-click="sub_navigation_panel = true; open_menu(item)" ng-attr-style="color: {{base_hue_darkest.value}};">
 				<md-icon ng-attr-style="color: {{base_hue_darkest.value}}">keyboard_arrow_down</md-icon>
 				{{item.navigation.parent.name}}
 			</md-button>
-			<a ng-if="item.navigation.parent.name == 'People'" ng-click="sub_navigation_panel = false;" ng-href="{{item.navigation.parent.url}}">
+			<a ng-if="item.navigation.parent.url" ng-click="sub_navigation_panel = false;" ng-href="{{item.navigation.parent.url}}">
 				<md-button class="navigation link" ng-attr-style="color: {{base_hue_darkest.value}};">
 					<md-icon ng-attr-style="color: {{base_hue_darkest.value}}">keyboard_arrow_down</md-icon>
 					{{item.navigation.parent.name}}
