--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -28,6 +28,10 @@
 		<div ng-include src="'application/landing/partials/section_2.html'"></div>
 		<!-- Item Carousel -->
 
+		<!-- Item Carousel -->
+		<div ng-include src="'application/landing/partials/slideshow_2.html'"></div>
+		<!-- Item Carousel -->
+
 		<!-- Map With Contact Form Overlay -->
 		<div ng-include src="'application/landing/partials/section_3.html'"></div>
 		<!-- Map With Contact Form Overlay -->
