--- a/lib/client/app/application/partials/navigation-dropdown.html
+++ b/lib/client/app/application/partials/navigation-dropdown.html
@@ -62,7 +62,7 @@
     	<div class="container navigation widget featured_items" layout-margin flex="100" layout="row" layout-align="center center" layout-wrap ng-if="menu_title == 'Projects'">
             <div flex="100" layout-margin>
                 <md-grid-list md-cols="4" md-cols-xs="4" md-cols-sm="4" md-cols-md="6" md-cols-gt-md="6" md-row-height-gt-md="150px" md-row-height-gt-sm="175px" md-row-height="125px" md-gutter="8px" md-gutter-gt-sm="4px">
-                    <md-grid-tile class="md-whiteframe-4dp" ng-repeat="tile in projectslist | limitTo: -6" md-rowspan="1" md-rowspan-xs="1" md-rowspan-sm="1" md-colspan="4" md-colspan-gt-md="3" md-colspan-md="3" md-colspan-sm="4" md-colspan-xs="4" style="overflow: hidden;" ng-init="hovered = false" ng-mouseenter="hovered = true" ng-mouseleave="hovered = false">
+                    <md-grid-tile class="md-whiteframe-4dp" ng-repeat="tile in featured_projects | limitTo: 6" md-rowspan="1" md-rowspan-xs="1" md-rowspan-sm="1" md-colspan="4" md-colspan-gt-md="3" md-colspan-md="3" md-colspan-sm="4" md-colspan-xs="4" style="overflow: hidden;" ng-init="hovered = false" ng-mouseenter="hovered = true" ng-mouseleave="hovered = false">
                         <a href="{{tile.settings.url}}" ng-click="close_menu(); close_parent_menu()">
                             <img ng-src="{{tile.data.page.foreground.images.source}}" style="width: auto; max-width:300%; min-height: 100%;">
                             <md-grid-tile-footer md-truncate ng-class="{'active': hovered}"><h3 style="white-space: pre-wrap;">{{tile.data.title}}<md-icon ng-attr-style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Go to gallery {{tile.data.title}}" md-font-library="material-icons">chevron_right</md-icon></h3></md-grid-tile-footer>
